# drf-auth

./: README.md  pyproject.toml
drf-auth/: creds.txt  db.sqlite3  docker-compose.yml  manage.py  requirements.txt
drf-auth/country/: serializers.py  views.py
drf-auth/drf-auth/: asgi.py  settings.py  urls.py  wsgi.py
languages/: docker-compose.yml  requirements.txt
languages/country/: admin.py  models.py  permissions.py  urls.py  views.py
languages/country/migrations/: 0001_initial.py
languages/drf-auth/: asgi.py  settings.py  urls.py  wsgi.py
